--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   sidebarx: ^0.17.1
   cloud_firestore: ^5.6.0
+  firebase_auth: ^5.3.4
 
 
 dev_dependencies:
