--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: ^5.6.0
   curved_navigation_bar: ^1.0.6
   firebase_auth: ^5.3.4
+  shared_preferences: ^2.0.17
+
 
 
 
